--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   carousel_slider: ^1.3.1
+  flappy_search_bar: 1.4.1
+  video_player: ^0.10.8+1
 
 dev_dependencies:
   flutter_test:
