--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   carousel_slider: ^1.3.1
   flappy_search_bar: 1.4.1
   video_player: ^0.10.8+1
+  http: ^0.12.0+4
 
 dev_dependencies:
   flutter_test:
