--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flappy_search_bar: 1.4.1
   video_player: ^0.10.8+1
   http: ^0.12.0+4
+  flutter_svg: ^0.17.4
 
 dev_dependencies:
   flutter_test:
