--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   video_player: ^0.10.8+1
   http: ^0.12.0+4
   flutter_svg: ^0.17.4
+  assorted_layout_widgets: ^1.0.18
 
 dev_dependencies:
   flutter_test:
