--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,8 @@ dependencies:
   http: ^0.12.0+4
   flutter_svg: ^0.17.4
   assorted_layout_widgets: ^1.0.18
-  shared_preferences: ^0.5.6+3
   modal_progress_hud: ^0.1.3
+  shared_preferences: ^0.5.7
 
 dev_dependencies:
   flutter_test:
