--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   assorted_layout_widgets: ^1.0.18
   modal_progress_hud: ^0.1.3
   shared_preferences: ^0.5.7
+  fluttertoast: ^4.0.0
 
 dev_dependencies:
   flutter_test:
