--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,10 @@ dependencies:
   http: ^0.12.0+4
   flutter_svg: ^0.17.4
   assorted_layout_widgets: ^1.0.18
-  shared_preferences: ^0.5.6+3
+  shared_preferences: ^0.5.7
   modal_progress_hud: ^0.1.3
   chewie: ^0.9.10
-  fluttertoast: ^3.1.3
+  fluttertoast: ^4.0.0
   timezone: ^0.5.6
   razorpay_flutter: ^1.1.3
 
