--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   video_player: ^0.10.8+1
   http: ^0.12.0+4
   flutter_svg: ^0.17.4
-  assorted_layout_widgets: ^1.0.18
+  assorted_layout_widgets: ^1.1.0
   shared_preferences: ^0.5.7
   modal_progress_hud: ^0.1.3
   chewie: ^0.9.10
@@ -51,6 +51,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  fonts:
+      - family:  AcademeCustomIcons
+        fonts:
+          - asset: fonts/AcademeCustomIcons.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
