--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   fluttertoast: ^4.0.0
   timezone: ^0.5.6
   razorpay_flutter: ^1.1.3
+#  firebase_auth: ^0.16.0
+#  firebase_core: ^0.4.4+3
+#  firebase_analytics: ^5.0.11
+#  cloud_firestore: ^0.13.5
+  google_sign_in: ^4.4.6
 
 dev_dependencies:
   flutter_test:
